<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">G+ Login</string>
    <string name="action_settings">Settings</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_google_login">GoogleLoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_scan">Skanuj</string>
    <string name="title_activity_skaner">Skaner</string>
    <string name="scan">Skanuj</string>
    <string name="abc">123&#8230;abc&#8230;</string>
    <string name="ilosc">"Ilość: "</string>
    <string name="waga">"Waga: "</string>
    <string name="cena">"Cena: "</string>
    <string name="nazwa">Nazwa</string>
    <string name="logowanie">Trwa logowanie, proszę czekać&#8230;</string>
    <string name="brak_skanu">Brak skanu</string>
    <string name="url_opisy_produktow">http://opisyproduktow.pl/webapi10/xml/</string>
    <string name="url_login">http://softpartner.pl/kolektor/login.php</string>
    <string name="url_szukaj_produktow">http://softpartner.pl/kolektor/szukaj_produkty.php</string>
    <string name="url_dodaj_kod">http://softpartner.pl/kolektor/dodaj_kod.php</string>
    <string name="url_dodaj_produkt">http://softpartner.pl/kolektor/dodaj_produkt.php</string>
    <string name="url_usun_produkt">http://softpartner.pl/kolektor/usun_produkt.php</string>
    <string name="brak_produktu">Brak produktu o danym kodzie.\nCzy chcesz</string>
    <string name="przypisac_do_istniejacego">przypisać kod do\nistniejącego produktu?</string>
    <string name="dodac_nowy">dodać nowy produkt?</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="revokeAccess">Revoke Access</string>
    <string name="title_activity_wyswietl_produkt">Produkt</string>
    <string name="kod_kreskowy">"Kod kreskowy: "</string>
    <string name="opis">"Opis: "</string>
    <string name="zapamietano_kod">"Zapamiętano kod: "</string>
    <string name="znajdz_aby_dodac">"Znajdz produkt do którego chcesz dodać ten kod."</string>
    <string name="komunikat">Komunikat</string>
    <string name="czy_dodac1">"Czy chcesz dodać kod \""</string>
    <string name="czy_dodac2">"\" do tego produktu?"</string>
    <string name="czy_usunac">"Czy chcesz usunąć "</string>
    <string name="dodawanie_kodu">Trwa dodawanie kodu&#8230;</string>
    <string name="dodawanie_produktu">Trwa dodawanie produktu&#8230;</string>
    <string name="tak">"Tak"</string>
    <string name="nie">"Nie"</string>
    <string name="dodano_kod">Pomyślnie dodano kod</string>
    <string name="nie_dodano_kodu">Nie udało się dodać kodu</string>
    <string name="dodano_produkt">Pomyślnie dodano produkt</string>
    <string name="usuwanie_produktu">Trwa usuwanie produktu&#8230;</string>
    <string name="nie_dodano_produktu">Nie udało się dodać produktu</string>
    <string name="usunieto">Usunięto produkt "</string>
    <string name="nie_usunieto">""Nie udało się usunąć "</string>
    <string name="profile_image">Profile image</string>
    <string name="title_activity_dodaj_produkt">Dodaj Produkt</string>
    <string name="uruchom_ponownie">Błąd logowania, uruchom ponownie aplikacje</string>
    <string name="losowy_kod">123456789</string>
    <string name="losowa_cena">$19.99</string>
    <string name="losowa_waga">1.250 kg</string>
    <string name="losowa_ilosc">10 szt.</string>
    <string name="wpisz_tekst">Wpisz tekst&#8230;</string>
    <string name="wyslij">Wyślij</string>
    <string name="uzupelnij_dane">Uzupełnij wszystkie dane</string>
    <string name="title_activity_scandit">Scandit</string>
    <string name="szukaj">Search</string>

</resources>