<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context="com.softpartner.kolektorproduktow.DodajProdukt" >

        <EditText
            android:id="@+id/dodaj_nazwa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nazwa"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/kod_kreskowy"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dodaj_kody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/losowy_kod"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cena"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dodaj_cena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/losowa_cena"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waga"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dodaj_waga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/losowa_waga"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ilosc"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dodaj_ilosc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/losowa_ilosc"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opis"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/dodaj_opis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wpisz_tekst"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/wyslij_produktBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/wyslij" />

    </LinearLayout>

</ScrollView>
