<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp" >

    <RelativeLayout
        android:id="@+id/single_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_effect" >

        <TextView
            android:id="@+id/single_item_nr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/single_item_nazwa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:text="@string/nazwa"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/single_item_kody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/single_item_nazwa"
            android:layout_toRightOf="@+id/single_item_nr"
            android:layout_toEndOf="@+id/single_item_nr" />

        <TextView
            android:id="@+id/single_item_produktID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/single_item_cena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/single_item_nazwa"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/cena" />

        <TextView
            android:id="@+id/single_item_ilosc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/single_item_cena"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/ilosc" />

        <TextView
            android:id="@+id/single_item_waga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/single_item_ilosc"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/waga" />
    </RelativeLayout>

</RelativeLayout>